--- a/src/main/resources/application-flyway.yml
+++ b/src/main/resources/application-flyway.yml
@@ -1,42 +1,42 @@
-# ============================================================
-# Flyway 数据库迁移配置
-# 项目：minio-multipart-upload
-# 版本：1.0.0
-# 描述：Flyway配置文件，用于数据库版本管理
-# ============================================================
-
-# Flyway 配置
-spring:
-  flyway:
-    # 是否启用 Flyway
-    enabled: true
-    
-    # 迁移脚本位置
-    locations: 
-      - classpath:db/migration
-    
-    # 迁移脚本表名
-    table: flyway_schema_history
-    
-    # 基准版本（如果已有数据，需要设置）
-    baseline-on-migrate: true
-    baseline-version: 1.0.0
-    baseline-description: "Initial schema"
-    
-    # 迁移脚本编码
-    encoding: UTF-8
-    
-    # 是否允许无序迁移（开发环境可用）
-    out-of-order: false
-    
-    # 验证迁移
-    validate-on-migrate: true
-    
-    # 清理数据库（仅开发环境）
-    # clean-disabled: false
-    
-    # 忽略迁移失败（生产环境设为false）
-    ignore-migration-patterns: "*:pending"
-    
-    # 目标版本（latest表示最新版本）
-    target: latest
+## ============================================================
+## Flyway 数据库迁移配置
+## 项目：minio-multipart-upload
+## 版本：1.0.0
+## 描述：Flyway配置文件，用于数据库版本管理
+## ============================================================
+#
+## Flyway 配置
+#spring:
+#  flyway:
+#    # 是否启用 Flyway
+#    enabled: false
+#
+#    # 迁移脚本位置
+#    locations:
+#      - classpath:db/migration
+#
+#    # 迁移脚本表名
+#    table: flyway_schema_history
+#
+#    # 基准版本（如果已有数据，需要设置）
+#    baseline-on-migrate: true
+#    baseline-version: 1.0.0
+#    baseline-description: "Initial schema"
+#
+#    # 迁移脚本编码
+#    encoding: UTF-8
+#
+#    # 是否允许无序迁移（开发环境可用）
+#    out-of-order: false
+#
+#    # 验证迁移
+#    validate-on-migrate: true
+#
+#    # 清理数据库（仅开发环境）
+#    # clean-disabled: false
+#
+#    # 忽略迁移失败（生产环境设为false）
+#    ignore-migration-patterns: "*:pending"
+#
+#    # 目标版本（latest表示最新版本）
+#    target: latest
