--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,13 +13,13 @@ spring:
   # Redis配置
   redis:
     # Redis服务器地址
-    host: ${REDIS_HOST:localhost}
+    host: ${REDIS_HOST:192.168.0.245}
     # Redis服务器端口
     port: ${REDIS_PORT:6379}
     # Redis数据库索引（0-15，默认为0）
-    database: ${REDIS_DATABASE:0}
+    database: ${REDIS_DATABASE:10}
     # Redis密码（如果没有设置密码，可以留空）
-    password: ${REDIS_PASSWORD:}
+    password: ${REDIS_PASSWORD:123456}
     # 连接超时时间（毫秒）
     timeout: 10000
     # Lettuce连接池配置
@@ -41,7 +41,7 @@ spring:
     # useSSL=false：不使用SSL（开发环境）
     # allowPublicKeyRetrieval=true：允许RSA公钥检索
     # serverTimezone=UTC：服务器时区设置
-    url: ${DB_URL:jdbc:mysql://192.168.0.240:3316/minio_upload?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
+    url: ${DB_URL:jdbc:mysql://192.168.0.240:3316/base_ca_sign?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
     # MySQL JDBC驱动类
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 数据库用户名
