--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.19</version>
+        </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
